# vk_bridge

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  database.py  docker-compose.yml  main.py  media.py  pyproject.toml  tg_handler.py  vk_listener.py
tests/: test_database.py  test_media.py  test_tg_handler.py
