[project]
name = "vk-bridge"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.29.0",
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
    "pillow>=12.2.0",
    "pydantic-settings>=2.14.2",
    "vk-api>=11.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
